--- a/assets/scss/components/_card.scss
+++ b/assets/scss/components/_card.scss
@@ -30,11 +30,12 @@
   flex: 1 0 100%;
   max-width: 100%;
   margin-bottom: 2.5rem;
-  &img {
+
+  img {
     border-top-right-radius: 3px;
     border-top-left-radius: 3px;
     max-width: 100%;
-    height: 7.375rem;
+    height: 12rem;
     object-fit: cover;
     object-position: center;
     border-bottom: 4px solid #000;
