--- a/layouts/authors/single.html
+++ b/layouts/authors/single.html
@@ -182,7 +182,8 @@
                   <p><img class="icon" src="{{ if eq $.Site.Params.env "local" }}/{{ else }}/engineering-education/{{ end }}images/comment-icon.png" alt="Article Comments" /></p><span id="comments-count-{{ $elem_index }}">0</span>
                 </div>
                 <div class="data-point page-views page-views-icon-{{ $elem_index }}">
-                  <p><img class="icon" src="{{ if eq $.Site.Params.env "local" }}/{{ else }}/engineering-education/{{ end }}images/page-views-icon.png" alt="Page Views" /></p><span id="page-views-count-{{ $elem_index }}">0</span>
+                  <p><img class="icon" src="{{ if eq $.Site.Params.env "local" }}/{{ else }}/engineering-education/{{ end }}images/page-views-icon.png" alt="Page Views" /></p>
+                  <span data-slug="/{{ $articleSlug }}/" id="page-views-count-{{ $elem_index }}">0</span>
                 </div>
               </div>
             </div>
@@ -229,7 +230,7 @@
   }
 
   document.addEventListener("DOMContentLoaded", async function() {
-    const getPageView = (url, currentUrl) => {
+    {{/*  const getPageView = (url, currentUrl) => {
       const urlRegex = /(http:\/\/localhost:1313\/)|(https:\/\/beta.section.io\/engineering-education\/)|(https:\/\/www.section.io\/engineering-education\/)/gi;
       const trimmedUrl = url.replace(urlRegex, '');
 
@@ -253,18 +254,55 @@
           }
         })
         .catch(err => console.log('err:', err));
+    }  */}}
+
+    const getPageViews = (urls) => {
+      const urlRegex = /(http:\/\/localhost:1313\/)|(https:\/\/beta.section.io\/engineering-education\/)|(https:\/\/www.section.io\/engineering-education\/)/gi;
+      const trimmedUrls = urls.map(url => url.replace(urlRegex, ''));
+      console.log('trimmedUrls:', trimmedUrls)
+
+      const handleError = response => {
+        if (!response.ok) {
+          throw Error(response.statusText);
+        } else {
+          return response.json();
+        }
+      }
+
+      return fetch('{{ if eq $.Site.Params.env "local" }}http://localhost:3000/pageviews/{{ else }}https:\/\/api.www.section.io/pageviews/{{ end }}', { 
+        "method": "POST",
+        "headers": {
+          "Content-Type": "application/json"
+        },
+        "body": JSON.stringify(trimmedUrls)
+      })
+        .then(handleError)
+        .then(data => {
+          if (data.length > 0) {
+            data.forEach(item => {
+              const itemUrl = item.url.replace('/engineering-education', '');
+              const numPageViews = parseInt(item.pageViews).toLocaleString();
+              const pageViewsEl = document.querySelector(`[data-slug="${itemUrl}"]`);
+              const parentElement = pageViewsEl.closest('.page-views');
+              pageViewsEl.innerText = numPageViews;
+              parentElement.classList.add('visible');
+            })
+          }
+        })
+        .catch(err => console.log('err:', err));
     }
 
     const applyPageViews = async (urls) => {
-      let currentUrl = 0;
+      {{/*  let currentUrl = 0;
 
       while (currentUrl <= urls.length - 1) {
         await getPageView(urls[currentUrl], currentUrl);
         currentUrl++;
-      }
+      }  */}}
+      getPageViews(urls);
     }
 
-    const urlsOfArticles = "{{ $articleUrlsList }}";
+    const urlsOfArticles = '{{ $articleUrlsList }}';
     const articlesArr = urlsOfArticles.split(', ');
     applyPageViews(articlesArr);
   });
