Total likes insights (#7573)
* Progress on total likes
* Refactor multiple fetch calls into one.

--- a/layouts/authors/single.html
+++ b/layouts/authors/single.html
@@ -68,6 +68,10 @@
               <img src="{{ if eq $.Site.Params.env "local" }}/{{ else }}/engineering-education/{{ end }}images/total-articles-icon.png" alt="Total Number of Articles Icon" />
               <p>{{ $numberOfArticles }}</p>
             </div>
+            <div class="insight total-article-likes" data-before="Total Number of Article Likes">
+              <img src="{{ if eq $.Site.Params.env "local" }}/{{ else }}/engineering-education/{{ end }}images/clapping-icon.png" alt="Total Number of Articles Icon" />
+              <p id="totalArticleLikes">0</p>
+            </div>
           </div>
           
           {{ with .Params.skills }} 
@@ -131,27 +135,7 @@
           {{ $articlePermalink = .Permalink }}
         {{ end }}
 
-        {{ $articleSlug := .Permalink | relURL | anchorize }}
-
-        <script defer type="text/javascript">
-          document.addEventListener("DOMContentLoaded", async function() {
-            fetch('https://talk.hyvor.com/api/v1/page/?page_identifier={{ $articlePermalink }}&website_id={{ $hyvorId }}')
-              .then(response => response.json())
-              .then(data => {
-                if (data.status === true) {
-                  if (!data.data.comments_count) {
-                    document.getElementById('comments-count-{{ $elem_index }}').innerText = 0;
-                  } else {
-                    document.getElementById('comments-count-{{ $elem_index }}').innerText = data.data.comments_count;
-                  }
-                  document.getElementById('likes-count-{{ $elem_index }}').innerText = data.data.reactions[0];
-                }
-              })
-              .catch(err => console.log('Error: ', err));
-          });
-        </script>
-        
-        <li class="blog-listing-posts-item mix {{ with .Params.tags }}{{ range . }}{{ lower . }} {{ end }}{{ end }}">
+        <li class="blog-listing-posts-item mix {{ with .Params.tags }}{{ range . }}{{ lower . }} {{ end }}{{ end }}" data-id="{{ $articlePermalink }}">
           <a class="decoration-none xs-pb-40 xs-pt-40 pl-25 flex flex-wrap" href="{{.Permalink}}">
 
             <div class="blog-listing-posts-item-image">
@@ -176,10 +160,10 @@
 
               <div id="insightsData-{{ $elem_index }}" class="blog-listing-posts-item-insights-data">
                 <div class="data-point">
-                  <p><img class="icon" src="{{ if eq $.Site.Params.env "local" }}/{{ else }}/engineering-education/{{ end }}images/clapping-icon.png" alt="Article Likes" /></p><span id="likes-count-{{ $elem_index }}">0</span>
+                  <p><img class="icon" src="{{ if eq $.Site.Params.env "local" }}/{{ else }}/engineering-education/{{ end }}images/clapping-icon.png" alt="Article Likes" /></p><span class="likes-count" id="likes-count-{{ $elem_index }}">0</span>
                 </div>
                 <div class="data-point">
-                  <p><img class="icon" src="{{ if eq $.Site.Params.env "local" }}/{{ else }}/engineering-education/{{ end }}images/comment-icon.png" alt="Article Comments" /></p><span id="comments-count-{{ $elem_index }}">0</span>
+                  <p><img class="icon" src="{{ if eq $.Site.Params.env "local" }}/{{ else }}/engineering-education/{{ end }}images/comment-icon.png" alt="Article Comments" /></p><span class="comment-count" id="comments-count-{{ $elem_index }}">0</span>
                 </div>
                 <div class="data-point page-views page-views-icon-{{ $elem_index }}">
                   <p><img class="icon" src="{{ if eq $.Site.Params.env "local" }}/{{ else }}/engineering-education/{{ end }}images/page-views-icon.png" alt="Page Views" /></p><span id="page-views-count-{{ $elem_index }}">0</span>
@@ -222,13 +206,15 @@
     el.classList.toggle('tooltip');
   }
   
+  // Add touch event listener for mobile.
   const insightItems = document.getElementsByClassName("insight");
-
   for (let i = 0; i < insightItems.length; i++) {
     insightItems[i].addEventListener("touch", () => toggleToolTip(insightItems[i]))
   }
 
+  // On page load, handle insights, comments and pageviews.
   document.addEventListener("DOMContentLoaded", async function() {
+    // Request page views from our GA PageViews API.
     const getPageView = (url, currentUrl) => {
       const urlRegex = /(http:\/\/localhost:1313\/)|(https:\/\/beta.section.io\/engineering-education\/)|(https:\/\/www.section.io\/engineering-education\/)/gi;
       const trimmedUrl = url.replace(urlRegex, '');
@@ -255,6 +241,7 @@
         .catch(err => console.log('err:', err));
     }
 
+    // Apply page views to each article.
     const applyPageViews = async (urls) => {
       let currentUrl = 0;
 
@@ -267,6 +254,45 @@
     const urlsOfArticles = "{{ $articleUrlsList }}";
     const articlesArr = urlsOfArticles.split(', ');
     applyPageViews(articlesArr);
+
+    // Request all article data from Hyvor talk - this will allow us to use 
+    // one request per page, instead of separare requests for each article.
+    const requestArticlesData = async (articleUrls) => {
+      let totalNumberOfLikes = 0;
+
+      const url = new URL('https://talk.hyvor.com/api/v1/pages/'); 
+      const params = {
+        'page_identifiers': JSON.stringify(articleUrls),
+        'website_id': {{ $hyvorId }}
+      }
+      Object.keys(params).forEach(key => url.searchParams.append(key, params[key]));
+
+      fetch(url)
+        .then(response => response.json())
+        .then(data => {
+          // Map through each data item
+          // Add number of comments and likes to each article by data-id.
+          if (data.status === true && data.data.length) {
+            data.data.forEach(item => {
+              const articleElement = document.querySelector(`[data-id='${item.page_identifier}']`);
+              const commentCountElement = articleElement.querySelector('.comment-count');
+              const likesCountElement = articleElement.querySelector('.likes-count');
+
+              // Add comment count and number of likes
+              commentCountElement.innerText = item.comments_count;
+              likesCountElement.innerText = item.reactions[0];
+              totalNumberOfLikes += item.reactions[0]
+            })
+
+            // Add totalArticleLikes.
+            const totalArticleLikesElement = document.getElementById('totalArticleLikes');
+            totalArticleLikesElement.innerText = totalNumberOfLikes;
+          }
+        })
+        .catch(error => console.log("error: ", error))
+    }
+
+    requestArticlesData(articlesArr);
   });
   
 </script>
