--- a/layouts/authors/single.html
+++ b/layouts/authors/single.html
@@ -183,7 +183,7 @@
                 </div>
                 <div class="data-point page-views page-views-icon-{{ $elem_index }}">
                   <p><img class="icon" src="{{ if eq $.Site.Params.env "local" }}/{{ else }}/engineering-education/{{ end }}images/page-views-icon.png" alt="Page Views" /></p>
-                  <span data-slug="/{{ $articleSlug }}/" id="page-views-count-{{ $elem_index }}">0</span>
+                  <span data-slug="engineering-education/{{ $articleSlug }}/" id="page-views-count-{{ $elem_index }}">0</span>
                 </div>
               </div>
             </div>
@@ -230,36 +230,9 @@
   }
 
   document.addEventListener("DOMContentLoaded", async function() {
-    {{/*  const getPageView = (url, currentUrl) => {
-      const urlRegex = /(http:\/\/localhost:1313\/)|(https:\/\/beta.section.io\/engineering-education\/)|(https:\/\/www.section.io\/engineering-education\/)/gi;
-      const trimmedUrl = url.replace(urlRegex, '');
-
-      const handleError = response => {
-        if (!response.ok) {
-          throw Error(response.statusText);
-        } else {
-          return response.json();
-        }
-      }
-
-      return fetch(`https:\/\/api.www.section.io/pageviews/${trimmedUrl}`)
-        .then(handleError)
-        .then(data => {
-          if (data.pageViews) {
-            const numPageViews = parseInt(data.pageViews).toLocaleString();
-            const pageViewsEl = document.querySelector(`#page-views-count-${currentUrl}`);
-            const parentElement = document.querySelector(`.page-views-icon-${currentUrl}`);
-            pageViewsEl.innerText = numPageViews;
-            parentElement.classList.add('visible');
-          }
-        })
-        .catch(err => console.log('err:', err));
-    }  */}}
-
     const getPageViews = (urls) => {
       const urlRegex = /(http:\/\/localhost:1313\/)|(https:\/\/beta.section.io\/engineering-education\/)|(https:\/\/www.section.io\/engineering-education\/)/gi;
       const trimmedUrls = urls.map(url => url.replace(urlRegex, ''));
-      console.log('trimmedUrls:', trimmedUrls)
 
       const handleError = response => {
         if (!response.ok) {
@@ -280,9 +253,8 @@
         .then(data => {
           if (data.length > 0) {
             data.forEach(item => {
-              const itemUrl = item.url.replace('/engineering-education', '');
               const numPageViews = parseInt(item.pageViews).toLocaleString();
-              const pageViewsEl = document.querySelector(`[data-slug="${itemUrl}"]`);
+              const pageViewsEl = document.querySelector(`[data-slug="${item.url}"]`);
               const parentElement = pageViewsEl.closest('.page-views');
               pageViewsEl.innerText = numPageViews;
               parentElement.classList.add('visible');
@@ -292,19 +264,9 @@
         .catch(err => console.log('err:', err));
     }
 
-    const applyPageViews = async (urls) => {
-      {{/*  let currentUrl = 0;
-
-      while (currentUrl <= urls.length - 1) {
-        await getPageView(urls[currentUrl], currentUrl);
-        currentUrl++;
-      }  */}}
-      getPageViews(urls);
-    }
-
     const urlsOfArticles = '{{ $articleUrlsList }}';
     const articlesArr = urlsOfArticles.split(', ');
-    applyPageViews(articlesArr);
+    getPageViews(articlesArr);
   });
   
 </script>
