Testing string in prod.

--- a/layouts/authors/single.html
+++ b/layouts/authors/single.html
@@ -136,6 +136,7 @@
         {{ end }}
 
         {{ $articleSlug := .Permalink | relURL | anchorize }}
+        <script>console.log('articleSlug:', '{{ $articleSlug }}');</script>
 
         <li class="blog-listing-posts-item mix {{ with .Params.tags }}{{ range . }}{{ lower . }} {{ end }}{{ end }}" data-id="{{ $articlePermalink }}">
           <a class="decoration-none xs-pb-40 xs-pt-40 pl-25 flex flex-wrap" href="{{.Permalink}}">
