Add partialCached to eng-ed-banner.html.

--- a/layouts/articles/single.html
+++ b/layouts/articles/single.html
@@ -29,7 +29,7 @@
 </div>
 
 <article>
-  {{ partial "engineering-education/eng-ed-banner.html" . }}
+  {{ partialCached "engineering-education/eng-ed-banner.html" . }}
   <section
     class="hero-blocks xs-pt-50 xs-pb-50 sm-pt-100 sm-pb-100 -blue-blocks"
   >
