--- a/assets/scss/components/_all.scss
+++ b/assets/scss/components/_all.scss
@@ -2,6 +2,7 @@
 @import "author-blocks";
 @import "blog-listing";
 @import "card";
+@import "testimonials";
 @import "content-blocks";
 @import "content-blocks-small";
 @import "cta-block";
