--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -47,3 +47,7 @@
 {{- if eq (getenv "HUGO_ENV") "production" | or (eq $.Site.Params.env "production") -}}
 {{ partialCached "head-scripts" . }}
 {{- end -}}
+
+<!-- Slick Slider -->
+<link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
+
