--- a/assets/scss/components/_testimonials.scss
+++ b/assets/scss/components/_testimonials.scss
@@ -5,160 +5,247 @@
     padding-left: 5%;
     padding-right: 5%;
     margin: 0 auto;
-    max-width: 1600px;
-  }
-}
+    max-width: 1400px;
 
-.carousel {
-  position: relative;
+    .testimonials-header {
+      max-width: 800px;
+      margin: 0 auto 50px;
+    }
 
-  ul {
-    overflow: auto; 
-    display: flex; 
-    flex-wrap: nowrap; 
-    scroll-snap-type: x mandatory; 
-    scroll-snap-points-y: repeat(100%); 
-    scroll-behavior: smooth; 
-    // background: gray; 
-    -ms-overflow-style: none; 
-    scrollbar-width: none; 
-    margin: 0; 
-    padding: 0;
-
-    &::-webkit-scrollbar {
-      display: none; /* Hide scrollbar for Chrome, Safari and Opera */
-    } 
-
-    li {
-      position: relative; 
-      min-width: 100%; 
-      list-style: none; 
-      display: flex;
-      flex-flow: wrap;
-      flex-direction: row;
-      padding: 0 30px;
+    .testimonials-slider {
       
-      .testimonial-image {
+      .testimonial {
         display: flex;
         flex-flow: wrap;
-        min-width: 100px;
-        margin-right: 20px;
-        
-        img {
-          width: 100px;
-          height: 100px;
-          border-radius: 50%;
-          object-fit: cover;
-        }
-      }
+        padding: 0 30px 20px; 
 
-      .testimonial-content {
-        width: calc(100% - 120px);
-
-        .testimonial {
-          margin-bottom: 20px;
-        }
-
-        .author-name, .roles, .location {
-          margin-bottom: 3px;
-        }
-
-        .author-name {
-          color: $text-blue;
+        .testimonial-image {
+          display: flex;
+          flex-flow: wrap;
+          min-width: 100px;
+          margin-right: 20px;
           
-          a {
-            text-decoration: none;
-            color: $text-blue;
-
-            &:hover {
-              text-decoration: underline;
-            }
+          img {
+            width: 100px;
+            height: 100px;
+            border-radius: 50%;
+            object-fit: cover;
           }
         }
 
-        .roles {
-          font-style: italic;
-          color: $text-light-gray;
-        }
-        
-        .location {
-          color: $text-light-gray;
-        }
-      }
-    }
-  }
-
-  ol {
-    position: absolute; 
-    bottom: -40px; 
-    display: flex; 
-    justify-content: center; 
-    left: 50%; 
-    transform: translateX(-50%); 
-    z-index: 9;
-
-    li {
-      list-style: none; 
-      padding: 0 5px;
-      
-      a {
-        display: block; 
-        height: 10px; 
-        width: 10px; 
-        border: 2px solid $text-blue; 
-        background: #f1f1f1; 
-        border-radius: 100%;
-      }
-      &.selected {
-        a {
-          background: $text-blue;
-        }
-      }
-    }
-  }
-
-  .prev, 
-  .next {
-    display: none; 
-    user-select:none; 
-    cursor: pointer; 
-    font-size: 50px; 
-    color: $text-blue; 
-    position: absolute; 
-    left: -30px; 
-    padding: 15px 15px 30px; 
-    top: 50%; 
-    transform: translateY(-50%); 
-    z-index: 9; 
-    line-height: 0;
-  }
-
-  .next {
-    left: auto; 
-    right: -30px;
-  }
-
-  @include mq($to: 850px ) {
-    ul {
-      li {
-        min-width: calc(100%/1) !important;
-      }
-    }
-  }
-
-  @include mq($to: 550px ) {
-    ul {
-      li {
-        flex-direction: column;
-
-        .testimonial-image {
-          margin: 0 auto 30px;
-        }
-
         .testimonial-content {
-          width: 100%;
+          width: calc(100% - 120px);
+
+          .testimonial-text {
+            margin-bottom: 20px;
+          }
+
+          .author-name, .roles, .location {
+            margin-bottom: 3px;
+          }
+
+          .author-name {
+            color: $text-blue;
+            
+            a {
+              text-decoration: none;
+              color: $text-blue;
+
+              &:hover {
+                text-decoration: underline;
+              }
+            }
+          }
+
+          .roles {
+            font-style: italic;
+            color: $text-light-gray;
+          }
+          
+          .location {
+            color: $text-light-gray;
+          }
         }
+      }
+
+      .prev, 
+      .next {
+        display: none; 
+        user-select:none; 
+        cursor: pointer; 
+        font-size: 50px; 
+        color: $text-blue; 
+        position: absolute; 
+        left: -50px; 
+        padding: 15px; 
+        top: calc(50% - 50px); 
+        z-index: 9; 
+        line-height: 0;
+        max-width: 50px;
+      }
+
+      .next {
+        left: auto; 
+        right: -50px;
+      }
+
+      .prev {
+        transform: rotate(180deg);
       }
     }
   }
 }
+
+// .carousel {
+//   position: relative;
+
+//   ul {
+//     overflow: auto; 
+//     display: flex; 
+//     flex-wrap: nowrap; 
+//     scroll-snap-type: x mandatory; 
+//     // scroll-snap-points-y: repeat(100%); 
+//     scroll-behavior: smooth; 
+//     // background: gray; 
+//     -ms-overflow-style: none; 
+//     scrollbar-width: none; 
+//     margin: 0; 
+//     padding: 0;
+
+//     &::-webkit-scrollbar {
+//       display: none; /* Hide scrollbar for Chrome, Safari and Opera */
+//     } 
+
+//     li {
+//       position: relative; 
+//       min-width: 100%; 
+//       list-style: none; 
+//       display: flex;
+//       flex-flow: wrap;
+//       flex-direction: row;
+//       padding: 0 30px;
+      
+//       .testimonial-image {
+//         display: flex;
+//         flex-flow: wrap;
+//         min-width: 100px;
+//         margin-right: 20px;
+        
+//         img {
+//           width: 100px;
+//           height: 100px;
+//           border-radius: 50%;
+//           object-fit: cover;
+//         }
+//       }
+
+//       .testimonial-content {
+//         width: calc(100% - 120px);
+
+//         .testimonial {
+//           margin-bottom: 20px;
+//         }
+
+//         .author-name, .roles, .location {
+//           margin-bottom: 3px;
+//         }
+
+//         .author-name {
+//           color: $text-blue;
+          
+//           a {
+//             text-decoration: none;
+//             color: $text-blue;
+
+//             &:hover {
+//               text-decoration: underline;
+//             }
+//           }
+//         }
+
+//         .roles {
+//           font-style: italic;
+//           color: $text-light-gray;
+//         }
+        
+//         .location {
+//           color: $text-light-gray;
+//         }
+//       }
+//     }
+//   }
+
+//   ol {
+//     position: absolute; 
+//     bottom: -40px; 
+//     display: flex; 
+//     justify-content: center; 
+//     left: 50%; 
+//     transform: translateX(-50%); 
+//     z-index: 9;
+
+//     li {
+//       list-style: none; 
+//       padding: 0 5px;
+      
+//       a {
+//         display: block; 
+//         height: 10px; 
+//         width: 10px; 
+//         border: 2px solid $text-blue; 
+//         background: #f1f1f1; 
+//         border-radius: 100%;
+//       }
+//       &.selected {
+//         a {
+//           background: $text-blue;
+//         }
+//       }
+//     }
+//   }
+
+//   .prev, 
+//   .next {
+//     display: none; 
+//     user-select:none; 
+//     cursor: pointer; 
+//     font-size: 50px; 
+//     color: $text-blue; 
+//     position: absolute; 
+//     left: -30px; 
+//     padding: 15px 15px 30px; 
+//     top: 50%; 
+//     transform: translateY(-50%); 
+//     z-index: 9; 
+//     line-height: 0;
+//   }
+
+//   .next {
+//     left: auto; 
+//     right: -30px;
+//   }
+
+//   @include mq($to: 850px ) {
+//     ul {
+//       li {
+//         min-width: calc(100%/1) !important;
+//       }
+//     }
+//   }
+
+//   @include mq($to: 550px ) {
+//     ul {
+//       li {
+//         flex-direction: column;
+
+//         .testimonial-image {
+//           margin: 0 auto 30px;
+//         }
+
+//         .testimonial-content {
+//           width: 100%;
+//         }
+//       }
+//     }
+//   }
+// }
