--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -28,7 +28,7 @@
 
 {{ $style := resources.Get "scss/styles.scss" | resources.ToCSS | resources.Minify }}
 {{ $secureStyle := $style | resources.Fingerprint "sha512" }}
-<link rel="stylesheet" href="{{ $secureStyle.Permalink }}" integrity="{{ $secureStyle.Data.Integrity }}">
+<link rel="stylesheet" href="{{ $secureStyle.RelPermalink }}" integrity="{{ $secureStyle.Data.Integrity }}">
 
 <!-- Sajari SDK -->	
 <script src="https://unpkg.com/@sajari/sdk-js/dist.iife/index.js"></script>	
